2011-02-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17374: implode() issues in Install Tool

2011-02-02  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17087: BE user password not changable via setup module with "saltedpasswords" (Thanks to Marcus Krause)

2011-02-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17373: Standalone images in RTE-enabled field not rendered in frontend

2011-01-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17140: htmlArea RTE: In WebKit, RTE inserts incorrect link if text is double-clicked
	* Updated htmlArea RTE version to 2.0.8
	* Fixed bug #17160: htmlArea RTE: Link editing problems in Internet Explorer

2011-01-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17156: htmlArea RTE: Disable Cell merge button in FF when less than two cells are selected

2011-01-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16045: htmlArea RTE: Merging table cells using context menu doesn't work in Firefox

2011-01-17  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17066: Wrong PHPDoc comment for t3lib_div::writeFileToTypo3tempDir

2011-01-16  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #17069: Scheduler: Refresh icon has disappeared

2011-01-14  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17036: Misleading deprecation comment getReferenceHTML()

2011-01-11  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17036: Misleading deprecation comment getReferenceHTML()
	* Fixed bug #16967: [Caching framework] Remove not existing "GlobalsBackend" from config_default.php

2011-01-10  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15133: Rendering images with ImageMagick fails to set file permissions (Thanks to Alexander Grein)

2011-01-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #13695: Image output in frontend is not xhtml valid
	* Fixed bug #5896: Inserting a divider (<hr>) in the RTE breaks XHTML validation (and other things)
